Closed Bug 1427914 Opened 6 years ago Closed 6 years ago

Google Docs scroll bar tool tip is blank when scrolling with Retain Display List enabled

Categories

(Core :: Web Painting, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- verified

People

(Reporter: cpeterson, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Matt, I think this bug is a regression from bug 1344971. I bisected this regression to the following pushlog:

https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=530f8947e66c15581c0eac0ad3a39bd8d6856d48&tochange=bbed4bf1ca00d561e2b3745c2eba349b01a4fd03

STR:
1. Load a long Google Doc, such as: https://docs.google.com/document/d/1gCsFxXamW8RRvOe5hECz98Ftk-tcRRJcDFANj2VwCB0/
2. Click and slowly drag the scroll bar thumb.

RESULT:
The scroll bar tool tip says "1 of 5", but when it would change to "2 of 5", the tool tip instead goes blank with no text.

If I set "layout.display-list.retain" pref to false and restart Firefox, then I can no longer reproduce the bug.
Flags: needinfo?(matt.woodrow)
Bisected locally to https://hg.mozilla.org/integration/mozilla-inbound/rev/9e03e3a670ac
Assignee: nobody → matt.woodrow
Blocks: 1352499
Status: NEW → ASSIGNED
Flags: needinfo?(matt.woodrow)
Priority: -- → P1
This check modifies the resulting dirty rect returned, so we need it to be in the shared code, not just one of the callers.
Attachment #8940545 - Flags: review?(mikokm)
Comment on attachment 8940545 [details] [diff] [review]
Move the AnyContentAncestorModified check up

Review of attachment 8940545 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM.
Attachment #8940545 - Flags: review?(mikokm) → review+
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/19b69f2ee20b
Move the AnyContentAncestorModified check up into ComputeVisibleRectForFrame since it affects the resulting dirty rect. r=miko
https://hg.mozilla.org/mozilla-central/rev/19b69f2ee20b
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
I'm removing the firefox59 tracking request because I have verified this bug is fixed in Nightly 59.0a1 (2018-01-09).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: