Bug 1427914 - Move the AnyContentAncestorModified check up into ComputeVisibleRectForFrame since it affects the resulting dirty rect. r=miko

--HG--
extra : rebase_source : b450b026ba3e28b76e2176f7e58bbbd138c9d342